--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 /libros-guia
 /apunte
-
-05-Tema 3 - PROCESO DE PRUEBA DE SOFTWAREArchivo.pdf
-06-Tema 4 - DISEÑO DE LAS PRUEBASArchivo.pdf
-powerpoint/3- Proceso de Prueba de Software.pdf
-.gitignore
-powerpoint/3- Proceso de Prueba de Software.pptx
+/Temas
+/powerpoints
